--- a/app/views/editorial/profilo_new.html.erb
+++ b/app/views/editorial/profilo_new.html.erb
@@ -38,7 +38,7 @@
 
       <p>
         <%= label_tag :fs_tel %><br/>
-        <%= text_field_tag :fs_te %>
+        <%= text_field_tag :fs_tel %>
       </p>
 
       <p>
@@ -68,7 +68,7 @@
         <label><%= radio_button_tag :display_in, 1, true %> <%= 'Collaboratori' %></label><br/>
         <label><%= radio_button_tag :display_in, 2 %> <%= 'Responsabili' %></label><br/>
         <label><%= radio_button_tag :display_in, 3 %> <%= 'Direttori' %></label><br/>
-        <label><%= radio_button_tag :display_in, 4 %> <%= 'Non Visibile' %></label><br/>
+        <label><%= radio_button_tag :display_in, 0 %> <%= 'Non Visibile' %></label><br/>
       </div>
       <p style="padding:10px 0;"></p>
 
