--- a/app/views/settings/_display.html.erb
+++ b/app/views/settings/_display.html.erb
@@ -31,7 +31,7 @@
         -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "img_refresh_tsection")) %>  </p>
 
       <p>Sezioni
-        -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "section")) %>  </p>
+        -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "img_refresh_section")) %>  </p>
 
       <p>Articoli
         -  <%= link_to('Rigenera le immagini!', url_for(:controller => "settings", :action => "img_refresh_issues")) %>  </p>
