--- a/app/views/editorial/profilo_show.html.erb
+++ b/app/views/editorial/profilo_show.html.erb
@@ -1,95 +1,109 @@
 <div class="fs-layout-cell fs-content clearfix">
-  <% if flash[:notice] %>
-      <div id="fs-flash-notice"><%= notice %> </div>
-  <% end %>
-<% if !@user_profile.nil? %>
-  <div class="fs-content-layout post-layout-item-0" style="width: 99%">
-    <div class="fs-content-layout-row">
-      <div class="fs-layout-cell post-layout-item-3" style="width: 100%">
-        <article class="fs-post-profile fs-article">
-          <div class="fs-profiles-sx">
-            <%= @user_profile.my_avatar(:l) %>
-          </div>
-          <div class="fs-profiles-us">
-            <h3><%= (@user_profile.user.firstname unless !@user_profile.user.firstname) + ' ' + (@user_profile.user.lastname unless !@user_profile.user.lastname) %></h3>
-
-            <p><%= h @user_profile.fs_qualifica %></p>
-
-            <p>&nbsp;</p>
-          </div>
-          <div class="fs-profiles-cx">
-            <p><span> telefono </span>&nbsp;
-            <% if !@user_profile.fs_tel.empty? %>
-              <%= h @user_profile.fs_tel %>
-            <% else %>
-                    ɸ
-            <% end %></p>
-
-            <p><span> e-mail </span>&nbsp;
-            <% if !@user_profile.fs_mail.empty? %>
-              <%= h @user_profile.fs_mail %>
-            <% else %>
-                    ɸ
-            <% end %></p>
-
-            <p><span> fax </span>&nbsp;
-            <% if !@user_profile.fs_fax.empty? %>
-              <%= h @user_profile.fs_fax %>
-            <% else %>
-                    ɸ
-            <% end %></p>
-
-            <p><span> skype </span>&nbsp;<%= h @user_profile.fs_skype %>
-            <% if !@user_profile.fs_skype.empty? %>
-              <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
-              <div id="SkypeButton_Dropdown_<%= h @user_profile.fs_skype %>_1">
-                <script type="text/javascript">
-                  Skype.ui({
-                    "name": "dropdown",
-                    "element": "SkypeButton_Dropdown_<%= h @user_profile.fs_skype %>_1",
-                    "participants": ["<%= h @user_profile.fs_skype %>"]
-                  });
-                </script>
-              </div>
-            <% else %>
-                    ɸ
-            <% end %>
-              </p>
-
-
-            <p><span> sito </span>
-            <% if !@user_profile.external_url.empty? %>
-              <a href="<%= @user_profile.external_url %>" target="_blank"><%= h @user_profile.external_url %></a>
-            <% else %>
-                    ɸ
-            <% end %>
-            </p>
-          </div>
-          <div class="cleared"></div>
-          <div class="fs-profiles-bt">
-          <p class="fs-profiles-labels">Titoli </p>
-
-          <div class="htmloverflow"><%= raw @user_profile.titoli %></div>
-            <br/>&nbsp; <br/>
-
-          <p class="fs-profiles-labels"> Curriculum </p>
-
-          <div class="htmloverflow"><%= raw @user_profile.curriculum %></div>
-          </div>
-        </article>
-        <br/>&nbsp; <br/>
-        <%# if User.current.ismanager? || ((User.current.isauthor? || User.current.ismanager?) && User.current == @user_profile.user) %>
-        <% if User.current.admin? || User.current.ismanager? || User.current == @user_profile.user %>
+  <!--
+  <%# if flash[:notice] %>
+   <div id="fs-flash-notice"><%# notice %> </div>
+  <%# end %>
+  -->
+  <% if !@user_profile.nil? %>
+      <div class="fs-content-layout post-layout-item-0" style="width: 99%">
+        <div class="fs-content-layout-row">
+          <div class="fs-layout-cell post-layout-item-3" style="width: 100%">
             <article class="fs-post-profile fs-article">
-              <p style="text-align: center;">  <%= link_to("modifica", profile_edit_path(@user_profile), :class => "fs-giallo-button") %></p>
+              <div class="fs-profiles-sx">
+                <%= @user_profile.my_avatar(:l) %>
+              </div>
+              <div class="fs-profiles-us">
+                <h3><%= (@user_profile.user.firstname unless !@user_profile.user.firstname) + ' ' + (@user_profile.user.lastname unless !@user_profile.user.lastname) %></h3>
+
+                <p><%= h @user_profile.fs_qualifica %></p>
+
+                <p>&nbsp;</p>
+              </div>
+              <div class="fs-profiles-cx">
+                <% unless @user_profile.fs_tel.blank? %>
+                    <p><span> telefono </span>&nbsp;
+                      <%= h @user_profile.fs_tel %></p>
+                <% end %>
+
+                <% unless @user_profile.fs_mail.blank? %>
+                    <p><span> e-mail </span>&nbsp;
+                      <%= h @user_profile.fs_mail %></p>
+                <% end %>
+
+                <% unless @user_profile.fs_fax.blank? %>
+                    <p><span> fax </span>&nbsp;
+                      <%= h @user_profile.fs_fax %></p>
+                <% end %>
+
+                <% unless @user_profile.fs_skype.blank? %>
+                    <p><span> skype </span>&nbsp;<%= h @user_profile.fs_skype %>
+                      <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
+                    <div id="SkypeButton_Dropdown_<%= h @user_profile.fs_skype %>_1">
+                      <script type="text/javascript">
+                          Skype.ui({
+                              "name":"dropdown",
+                              "element":"SkypeButton_Dropdown_<%= h @user_profile.fs_skype %>_1",
+                              "participants":["<%= h @user_profile.fs_skype %>"]
+                          });
+                      </script>
+                    </div>
+                    </p>
+                <% end %>
+                <% unless @user_profile.external_url.blank? %>
+                    <p><span> sito </span>
+
+                      <a href="<%= @user_profile.external_url %>" target="_blank"><%= h @user_profile.external_url %></a>
+                    </p>
+                <% end %>
+
+              </div>
+              <div class="cleared"></div>
+              <div class="fs-profiles-bt">
+                <% unless @user_profile.titoli.blank? %>
+                    <p class="fs-profiles-labels">Titoli </p>
+
+                    <div class="htmloverflow"><%= raw @user_profile.titoli %></div>
+                    <br/>&nbsp; <br/>
+                <% end %>
+                <% unless @user_profile.curriculum.blank? %>
+                    <p class="fs-profiles-labels"> Curriculum </p>
+
+                    <div class="htmloverflow"><%= raw @user_profile.curriculum %></div>
+                <% end %>
+              </div>
             </article>
-        <% end %>
+            <br/>&nbsp; <br/>
+            <%# if User.current.ismanager? || ((User.current.isauthor? || User.current.ismanager?) && User.current == @user_profile.user) %>
+            <% if User.current.admin? || User.current.ismanager? || User.current == @user_profile.user %>
+                <article class="fs-post-profile fs-article">
+                  <p style="text-align: center;">  <%= link_to("modifica", profile_edit_path(@user_profile), :class => "fs-giallo-button") %></p>
+                </article>
+            <% end %>
+            <ul>
+              <li> admin= <%= User.current.admin? %> </li>
+              <li> author= <%= User.current.isauthor? %> </li>
+              <li> manager= <%= User.current.ismanager? %> </li>
+              <li> role= <%= User.current.role_id.to_s %> </li>
+            </ul>
+            <% if (User.current.admin? || User.current.ismanager? ) && @profiles_hidden.count > 0 %>
+                <article class="fs-post-profile fs-article">
+                  <div id="fs-profiles-all">
+                    <h4> Se vuoi tu puoi modificare i profili nascosti. </h4>
+                    <br />
+                      <% @profiles_hidden.each do |item| %>
+                          <div class="fs-profiles-all-itm"> <%= item.my_avatar(:xs) %></dt>
+                            <span> <%= link_to(('[' + item.user.id.to_s + '] ' + item.user.firstname + ' ' + item.user.lastname), :controller => "editorial", :action => "profilo_edit", :id => item.id) %> </span>
+                              </div>
+                      <% end %>
+                  </div>
+                </article>
+            <% end %>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
 
   <% else %>
-    <div id="fs-flash-notice">Informazione del profilo non trovata</div>
+      <!--  <div id="fs-flash-notice">Informazione del profilo non trovata</div> -->
   <% end %>
 </div>
 <%= render :partial => 'blocco_sidebar1' %>
