--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -36,7 +36,7 @@
                   <div id="no_user_mail">
                     <img src="/images/false.png" alt="Anagrafica non disponibile. Ci risulta già una registrazione con questa Anagrafica!" title="Anagrafica non disponibile. Ci risuta già una registrazione con questa Anagrafica!"/><br/>
                    <p class="fs-abbo-tips" > Informazione già presente nel server: Sei già registrato? Usi il <%= link_to l(:label_login), :signin %> per
-                    accedere di nuovo. Se hai problemi <%= link_to 'Contattaci', contatti_path %>.    </p>
+                    accedere di nuovo. Se hai problemi <%= link_to 'Contattaci', contattaci_path %>.    </p>
                             </div>
 
 
