--- a/app/views/account/_tramenu_login.html.erb
+++ b/app/views/account/_tramenu_login.html.erb
@@ -1,6 +1,6 @@
 <% if User.current && User.current.logged? %>
   <div class="fs-tramenu-blockheader x-granata" style="overflow: hidden;"> <%= User.current.name() %></div>
-  <div class="fs-login-logged">
+  <div class="fs-blockcontent fs-login-logged">
     <div id='fs-login-avatar'>
       <div class="fs-login">
         <% if User.current.user_profile %>
