--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -61,7 +61,7 @@
       <div class="fs-layout-cell layout-item-1" style="width: 50%">
         <h3> Non sei abbonato?</h3>
         <h4> Ecco tutte le informazioni per abbonarti </h4>
-        <blockquote style="margin: 10px 0"><%= Setting.template_iscription %>
+        <blockquote style="margin: 10px 0"><%= Setting.static_page_abbonamenti %>
         </blockquote>
       </div>
 
