--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -20,45 +20,37 @@
       <legend> Dati personali e di accesso</legend>
       <div class="fs-abbo-sx1">
         <p><label><%= l(:field_nome) %></label></p>
-        <p><label for="user_firstname"><%= l(:field_firstname) %> <span class="required">*</span></label>
-          <%= f.text_field :firstname, :style => 'width:60%;', :maxlength => 255 %></p>
+        <p><%= f.text_field :firstname, :label => l(:field_firstname) + " <span class='required'>*</span>", :style => 'width:60%;', :maxlength => 255 %></p>
 
-        <p><label for="user_lastname"><%= l(:field_lastname) %> <span class="required">*</span></label>
-          <%= f.text_field :lastname, :style => 'width:60%;', :maxlength => 255 %></p>
+        <p><%= f.text_field :lastname, :label => l(:field_lastname) + " <span class='required'>*</span>", :style => 'width:60%;', :maxlength => 255 %></p>
 
-        <p><label for="user_mail"><%= l(:field_mail) %> <span class="required">*</span></label>
-          <%= f.text_field :mail, :style => 'width:60%;', :maxlength => 255 %>
+        <p><%= f.text_field :mail, :label => l(:field_mail) + " <span class='required'>*</span>", :style => 'width:60%;', :maxlength => 255 %>
           <img id="si_user_mail" src="/images/true.png" alt="Anagrafica disponibile" title="Anagrafica disponibile"/>
-
-        <div id="no_user_mail">
-          <img src="/images/false.png" alt="Anagrafica non disponibile. Ci risulta già una registrazione con questa Anagrafica!" title="Anagrafica non disponibile. Ci risuta già una registrazione con questa Anagrafica!"/><br/>
-         <p class="fs-abbo-tips" > Informazione già presente nel server: Sei già registrato? Usi il <%= link_to l(:label_login), :signin %> per
-          accedere di nuovo. Se hai problemi <%= link_to 'Contattaci', contattaci_path %>.    </p>
-                  </div>
+          <div id="no_user_mail">
+            <img src="/images/false.png" alt="Anagrafica non disponibile. Ci risulta già una registrazione con questa Anagrafica!" title="Anagrafica non disponibile. Ci risuta già una registrazione con questa Anagrafica!"/><br/>
+            <p class="fs-abbo-tips" > Informazione già presente nel server: Sei già registrato? Usi il <%= link_to l(:label_login), :signin %> per
+            accedere di nuovo. Se hai problemi <%= link_to 'Contattaci', contattaci_path %>.    </p>
+          </div>
 
 
         <!--[form:user]-->
         <% if @user.auth_source_id.nil? %>
             <p class="fs-abbo-tips" style="width: 70%;"><%= l(:field_username_as_email) %></p>
             </div>
-                           <div class="fs-abbo-dx1">
+            <div class="fs-abbo-dx1">
 
-            <p><label for="user_login"><%= l(:field_login) %> <span class="required">*</span></label>
-              <%= f.text_field :login, :style => 'width:60%;', :maxlength => 255 %>
+            <p><%= f.text_field :login, :label => l(:field_login) + " <span class='required'>*</span>", :style => 'width:60%;', :maxlength => 255 %>
               <img id="si_user_login" src="/images/true.png" alt="login disponibile" title="login disponibile"/><img id="no_user_login" src="/images/false.png" title="login non disponibile. Ci risulta già una registrazione con questo login!"/>
             </p>
 
-            <p><label for="user_password"><%= l(:field_password) %> <span class="required">*</span></label>
-              <%= f.password_field :password, {:style => 'width:60%;', :maxlength => 255} %><br/>
+            <p><%= f.password_field :password, {:style => 'width:60%;', :label => l(:field_password) + " <span class='required'>*</span>", :maxlength => 255} %><br/>
               <em><%= l(:text_caracters_minimum, :count => Setting.password_min_length) %></em></p>
 
-            <p><label for="user_password_confirmation"><%= l(:field_password_confirmation) %> <span class="required">*</span></label>
-              <%= f.password_field :password_confirmation, { :style => 'width:60%;', :maxlength => 255 } %></p>
+            <p><%= f.password_field :password_confirmation, { :style => 'width:60%;', :label => l(:field_password_confirmation) + " <span class='required'>*</span>", :maxlength => 255 } %></p>
         <% end %>
 
-        <p><label for="user_language"><%= l(:field_language) %></label>
-          <span style='margin-left:7px;'>
-          <%= f.select( :language, lang_options_for_select )%></span></p>
+        <p><span style='margin-left:7px;'>
+          <%= f.select( :language, lang_options_for_select, :label => l(:field_language) + " <span class='required'>*</span>" )%></span></p>
         <% if Setting.openid? %>
             <p><label for="user_identity_url"><%= l(:field_identity_url) %></label>
               <%= f.text_field :identity_url %></p>
@@ -69,69 +61,51 @@
         <% end %>
         <!--[eoform:user]-->
       </div>
-        <div class="clearfix"></div>
+      <div class="clearfix"></div>
       <div class="fs-abbo-bottom">
         <div class="fs-abbo-sx1">
-        <p><label for="user_se_condition"><%= l(:field_se_condition) %> <span class="required">*</span></label>
-
-        <p><label><%= f.check_box :se_condition %> <%= l(:field_se_condition_readed) %></label></p>
-
-        <p>
-          Leggo le <a href='#' id='acondizioni' class='pri'><b>condizioni di utilizzo</b></a>
-        </p>
-
-      <div id="condizioni" title="Condizioni di utilizzo" class="hidden" style="overflow: hidden;">  </div>
+          <p><label><%= f.check_box :se_condition, :label => l(:field_language) + " <span class='required'>*</span>" %> <%= l(:field_se_condition_readed) %></label></p>
+          <p>Leggo le <a href='#' id='acondizioni' class='pri'><b>condizioni di utilizzo</b></a></p>
+          <div id="condizioni" title="Condizioni di utilizzo" class="hidden" style="overflow: hidden;">  </div>
+        </div>
+        <div class="fs-abbo-dx1">
+          <p><label><%= f.check_box :se_privacy, :label => l(:field_se_privacy) + " <span class='required'>*</span>" %> <%= l(:field_se_privacy_accept) %></label></p>
+          <p>Acconsento al <a href='#' id='ainformativa' class='pri'><b>trattamento dei dati</b></a></p>
+        </div>
+        <div id="informativa" title="Informativa" class="hidden" style="overflow: hidden;">
       </div>
-      <div class="fs-abbo-dx1">
-        <p><label for="user_se_privacy"><%= l(:field_se_privacy) %> <span class="required">*</span></label>
-
-        <p><label><%= f.check_box :se_privacy %> <%= l(:field_se_privacy_accept) %></label></p>
-
-        <p>
-          Acconsento al <a href='#' id='ainformativa' class='pri'><b>trattamento dei dati</b></a>
-        </p>
-      </div>
-      <div id="informativa" title="Informativa" class="hidden" style="overflow: hidden;">
-      </div>
-
-      </div>
-              </fieldset>
+    </div>
+    </fieldset>
 
     <fieldset class="" title="Privato o Affiliato ad un associazione" style="display: none;">
       <legend>Associato a: Sigla :: organismo :: Associazione</legend>
       <div class="box">
 
-        <p>
-          <label for="user_titolo" title="Per conto mio, Presidente, Tesoriere, Professionista, Consigliere, Segretario, Delegato, Altro, Segretaria, Dirigente, Amministratore unico, Operatore, Libero professionista, Amministratore, Tecnico/Dirigente, Professionista-consigliere, Socio, Associato, Studente, Vice-presidente, Responsabile Amministrativo, Vice Presidente Regionale, Impiegata, Avvocato, Consulente, Responsabile"><%= l(:field_titolo) %>
-            <span class="required">*</span></label>
-          <%= f.select :titolo, options_for_select(["Per conto mio", "Presidente", "Tesoriere", "Professionista", "Consigliere", "Segretario", "Delegato", "Altro", "Segretaria", "Dirigente", "Amministratore unico", "Operatore", "Libero professionista", "Amministratore", "Tecnico/Dirigente", "Professionista-consigliere", "Socio", "Associato", "Studente", "Vice-presidente", "Responsabile Amministrativo", "Vice Presidente Regionale", "Impiegata", "Avvocato", "Consulente", "Responsabile"], "Altro") %>
+        <p><%= f.select :titolo, options_for_select(["Per conto mio", "Presidente", "Tesoriere", "Professionista", "Consigliere", "Segretario", "Delegato", "Altro", "Segretaria", "Dirigente", "Amministratore unico", "Operatore", "Libero professionista", "Amministratore", "Tecnico/Dirigente", "Professionista-consigliere", "Socio", "Associato", "Studente", "Vice-presidente", "Responsabile Amministrativo", "Vice Presidente Regionale", "Impiegata", "Avvocato", "Consulente", "Responsabile"], "Altro") %></p>
 
-        <p><label for="user_num_reg_coni"><%= l(:field_coni_number) %> <span class="required">*</span></label>
-          <%= f.text_field :num_reg_coni, :style => 'width:25%;' %></p>
+        <p><%= f.text_field :num_reg_coni, :label => l(:field_coni_number), :style => 'width:25%;' %></p>
 
-        <hr class="dotted"/>
+        <hr class="dotted" />
 
-        <h2>vedi se esiste il Sigla :: Organismo :: Associazione della tua attività.</h2>
-
-        <p><label for="extra_organismo"><%= l(:field_affiliato) %> <span class="required">*</span></label>
+        <h4>vedi se esiste il Sigla :: Organismo :: Associazione della tua attività.</h4>
+        <p><label for="extra_organismo"><%= l(:field_affiliato) %>
           <%= hidden_field_tag "extra", "cross_select" %>
           <%= hidden_field_tag "extra", "asso_select" %>
-          <%= hidden_field_tag "extra", "organismo_select" %>
-
-        <div class="flash notice"> Digitare almeno 3 caratteri per iniziare la ricerca nelle associazione già registrate
+          <%= text_field_tag "extra_organismo_select" %>
+          <div class="flash notice"> Digitare almeno 3 caratteri per iniziare la ricerca nelle associazione già registrate
           con le loro affiliazione. Se non trovi la tua associazione riempi i campi qui sotto nel passo successivo
           -<%= l(:field_new_asso) %>- in modo da inserire la tua associazione
-        </div>
+          </div>
         </p>
 
       </div>
-      <hr class="dotted"/>
-      <div class="box hide">
 
-        <h2>Non trovi la tua Sigla :: Organismo :: Associazione. Identificale qui sotto</h2>
+      <hr class="dotted"/>
+
+      <div class="box hide">
+        <h4>Non trovi la tua Sigla :: Organismo :: Associazione. Identificale qui sotto</h4>
 
         <p><label for="user_cross_organization_id"><%= l(:field_sigla_organismo) %></label>
-
         <p><%= f.select :cross_organization_id, options_for_select(CrossOrganization.find(
             :all,
             :joins => [:type_organization],
@@ -146,28 +120,22 @@
               </p>
           <% end %>
         </div>
-
         <% #{e.organization.cross_organization.type_organization.tipo} :: #{e.organization.cross_organization.sigla}  %>
-
-
         <p><label for="user_asso_id"><%= l(:field_asso) %></label>
-
         <p><%= f.select :asso_id, options_for_select(Asso.find(
           :all,
           :include => [:users, {:organization => {:cross_organization => :type_organization}}],
           :order => 'ragione_sociale'
 ).collect { |e| [smart_truncate("Organismo #{e.ragione_sociale}", 100) + " (#{e.users.count()})", e.id] }), :include_blank => true, :required => false, :title => l(:field_asso_title) %></p>
         <%#, :size => 10, :width => 600 %>
-
       </div>
+
       <div class="box">
 
-        <h2>Se la tua associazione non sembra registrata. Compili i campi qui sotto per creare una sua scheda</h2>
-        <h4>Il team di FISCOSPORT provederà a contarti in un secondo momento per convalidare i campi. </h4>
+        <h4>Se la tua associazione non sembra registrata. Compili i campi qui sotto per creare una sua scheda</h4>
+        <h5>Il team di FISCOSPORT provederà a contarti in un secondo momento per convalidare i campi. </h5>
 
-        <p><strong><label for="user_soc"><%= l(:field_asso_for) %></strong><span class="required">*</span></label>
-          <%= f.text_field :soc, :style => 'width:80%;', :maxlength => 255 %></p>
-
+        <p><%= f.text_field :soc, :label => l(:field_soc), :style => 'width:80%;', :maxlength => 255 %></p>
         <div class="flash notice"><%= l(:field_asso_title) %></div>
 
         <p><strong><label for="user_comune_id"><%= l(:field_sigla_sede) %></strong>
@@ -177,27 +145,22 @@
           <small>Digitare almeno 2 caratteri per iniziare la ricerca</small>
         </p>
 
-        <p><label for="user_indirizzo"><%= l(:field_indirizzo) %></label>
-          <%= f.text_field :indirizzo, :style => 'width:60%;' %></p>
+        <p><%= f.text_field :indirizzo, :label => l(:field_indirizzo), :style => 'width:60%;' %></p>
 
-        <p><label for="user_telefono"><%= l(:field_telefono) %></label>
-          <%= f.text_field :telefono, {:style => 'width:60%;', :maxlength => 255} %></p>
+        <p><%= f.text_field :telefono, {:style => 'width:60%;', :label => l(:field_telefono), :maxlength => 255} %></p>
 
-        <p><label for="user_fax"><%= l(:field_fax) %></label>
-          <%= f.text_field :fax, {:style => 'width:60%;', :maxlength => 255} %></p>
+        <p><%= f.text_field :fax, {:style => 'width:60%;', :label => l(:field_fax), :maxlength => 255} %></p>
 
-        <hr class="dotted"/>
+        <hr class="dotted" />
 
-        <h2>La tua associazione ti ha dato un codice promozionale? inserilo qui:</h2>
+        <h4>La tua associazione ti ha dato un codice promozionale? inserilo qui:</h4>
 
-        <p><label for="user_codice"><%= l(:field_codice_segnalatore) %></label>
-          <%= f.text_field :codice, {:style => 'width:60%;', :maxlength => 255} %></p>
+        <p><%= f.text_field :codice, {:style => 'width:60%;', :label => l(:field_codice_segnalatore), :maxlength => 255} %></p>
 
-        <hr class="dotted"/>
+        <hr class="dotted" />
 
         <%# ex user_annotazioni %>
-        <p><label for="user_note"><%= l(:field_com) %></label>
-          <%= f.text_area :note, {:cols => 60, :rows => 10, :class => 'wiki-edit', :style => 'width:60%;'} %>
+        <p><%= f.text_area :note, {:cols => 60, :rows => 10, :label => l(:field_com), :class => 'wiki-edit', :style => 'width:60%;'} %>
         </p>
 
       </div>
